--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://mtfsy.github.io/'
 languageCode = 'en-us'
 title = 'Musthofa Syarifudin'
 theme = "typo"
